Changed the writing in the <p>

--- a/portfolio_update_v1/index.html
+++ b/portfolio_update_v1/index.html
@@ -10,7 +10,7 @@
 
     <div class="main-nav">
         <ul class="nav">
-          <li class="name">Jane Smith</li>
+          <li class="name">Will</li>
           <li><a href="#">Home</a></li>
           <li><a href="#">Experience</a></li>
         </ul>
@@ -25,8 +25,8 @@
     <main class="flex">
       <div class="card">
         <h2>Background</h2>
-        <p>I’m an aspiring web designer who loves everything about the web. I've lived in lots of different places and have worked in lots of different jobs. I’m excited to bring my life experience to the process of building fantastic looking websites.</p>
-        <p>I’ve been a professional cook and gardener and am a life-long learner who's always interested in expanding my skills.</p>
+        <p>I'm an aspiring web designer who enjoys learning how to design and write code. Luckily I have had a successful career in Dancing and am now looking forward to pursuing a new career in web design.</p>
+        <p>As I stated earlier, I have had a very successful career in dancing, musical theater and film. Which has traveled me all over the world.</p>
       </div> 
 
       <div class="card">
