More changes to <p> and <li>

--- a/portfolio_update_v1/index.html
+++ b/portfolio_update_v1/index.html
@@ -25,21 +25,21 @@
     <main class="flex">
       <div class="card">
         <h2>Background</h2>
-        <p>I'm an aspiring web designer who enjoys learning how to design and write code. Luckily I have had a successful career in Dancing and am now looking forward to pursuing a new career in web design.</p>
-        <p>As I stated earlier, I have had a very successful career in dancing, musical theater and film. Which has traveled me all over the world.</p>
+        <p>I'm an aspiring web designer who enjoys learning how to design and write code. Luckily I have had a successful career in dancing and am now looking forward to pursuing a new career in web design.</p>
+        <p>Luckily my career in dancing, musical theater and film. Has traveled me all over the world to many wonderful places.</p>
       </div> 
 
       <div class="card">
         <h2>Goals</h2>
-        <p>I want to master the process of building web sites and increase my knowledge, skills and abilities in:</p>
+        <p>As well as mastering the process of building web site. My goals in life are:</p>
         <ul class="skills">
-          <li>HTML</li>
-          <li>CSS</li>
-          <li>JavaScript</li>
-          <li>Ruby</li>
-          <li>Rails</li>
+          <li>Happiness</li>
+          <li>Love</li>
+          <li>Family</li>
+          <li>Travel</li>
+          <li>Friends</li>
         </ul>
-        <p>I’d like to work for a web design firm helping clients create an impressive online presence.</p>
+        <p>These are just some of the things I wish to accomplish in my lifetime.</p>
       </div> 
 
     </main>
