--- a/portfolio_update_v1/index.html
+++ b/portfolio_update_v1/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Jane Smith's Profile</title>
+  <title>Will Bozier's Profile</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
@@ -18,8 +18,8 @@
 
     <header>
       <img src="images/gene-kelly.jpg" alt="Gene Kelly in Singing in the Rain" class="profile-image">
-      <h1 class="tag name">Hello, I’m Jane.</h1>
-      <p class="tag location">My home is Portland, Oregon.</p>
+      <h1 class="tag name">Hello, I’m Will.</h1>
+      <p class="tag location">My home is London, UK</p>
     </header>
 
     <main class="flex">
