--- a/portfolio_update_v1/index.html
+++ b/portfolio_update_v1/index.html
@@ -45,11 +45,10 @@
     </main>
     <footer>
       <ul>
-        <li><a href="#" class="social twitter">Twitter</a></li>
-        <li><a href="#" class="social linkedin">LinkedIn</a></li>
-        <li><a href="#" class="social github">Github</a></li>
+        <li><a href="https://twitter.com/willbozier?lang=en" class="social twitter" target="_blank">Twitter</a></li>
+        <li><a href="https://github.com/boziw220" class="social github" target="_blank">Github</a></li>
       </ul>
-      <p class="copyright">Copyright 2015, Jane Smith</p>
+      <p class="copyright">Copyright 2017, Will Bozier</p>
     </footer>
   </body>
   </html>
